# sdapi-discord

./: .env.example  .gitignore  README-ja.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report-ja.md  bug_report.md  feature_request-ja.md  feature_request.md
docs/: requirements.md
src/sdapi_discord/: __init__.py  api_client.py  exceptions.py  logger.py  main.py
